# libcfg

./: .editorconfig  LICENSE.txt  Makefile.am  README.md  configure.ac  libcfg.c  libcfg.h  libcfg.pc.in
doc/: Doxyfile.in  Makefile.am
example/: Makefile  example.c
src/: Makefile.am  libcfg.c  libcfg.h
tests/: Makefile.am  example.c  example.h  input.conf
